# tinaxcraft

./: .gitignore  .gitmodules  README.md  bundle.js  deploy.sh  package-lock.json  package.json  tc.code-workspace  tsconfig.json  webpack.config.js
.github/workflows/: webpack.yml
apptest/: Game.cs  Program.cs  app.csproj
client/: deploy.sh  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
client/public/: index.html
client/src/: definitions.d.ts  index.ts  noisejs.d.ts  picker_vertex.glsl  sound.ts  texture.ts  util.ts  vertexCraft.glsl  world.ts  worldgen.ts
client2/: .gitignore  CMakeLists.txt  config.sh  copy-files-emscripten.cmake  copy-files.cmake  go.mod  go.sum  main.cpp  main.go  renderer.go  renderer.h
client2/assets/shader/: world_fragment.glsl  world_vertex.glsl
client2/engine/: game.go
client2/gladsrc/: glad.c
client2/include/glad/: glad.h
client2/renderer/: compiler.go  renderer.go  types.go
client2/shaders/: block_fragment.glsl  block_vertex.glsl
client2/shaders_web/: block_fragment.glsl  block_vertex.glsl
client2/src/: main.cpp  manager.cpp  manager.h  renderer.cpp  renderer.h  util.hpp  world.cpp  world.h  worldgen.cpp  worldgen.h
client3/: Cargo.toml
client3/src/: main.rs
protocol/: game.proto
public/: index.html
resources/: texture.xcf
server/: .gitignore  game.pb.go  gen_proto.sh  go.mod  go.sum  main.go  schema.sql
server/storage/: storage.go  world.go
server/types/: game.pb.go
server/world/: generator.go  world.go
src/: cursor_fragment.glsl  definitions.d.ts  fragment.glsl  fragmentCraft.glsl  index.ts  picker_fragment.glsl  picker_vertex.glsl  util.ts  vertex.glsl  world.ts  worldgen.ts  worldio.ts
wasm/: .gitignore  cutil.c
